Making progress in the app, mostly tinkering with materialUI

--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,14 @@
   padding: 2rem;
   text-align: center;
 }
+#input{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items:right;
+}
 
+#selectBox{
+  display:flex;
+  flex-direction: column;
+}
